Switch thread pool to a virtual thread pool and change SNMP default timeout to 10s